css/custom.css
@font-face {
    font-family: 'Gunfighter Academy';
    src: url('GunfighterAcademy-Regular.woff2') format('woff2'),
        url('GunfighterAcademy-Regular.woff') format('woff');
    font-weight: normal;
    font-style: normal;
}

body {
  padding-top: 3rem;
  background-color: #FFFAF0;
  font-family: 'Libre Baskerville',serif,-apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,"Helvetica Neue",Arial,sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol";
}

.company-name {
	color: #fff;
	text-align: center;
	top: 38%;
	position: relative;
	font-size: 5vw;
	font-family: 'Gunfighter Academy';
}

@media (max-width: 768px) {
  .company-name {
	  font-size: 10vw;
  }
}

.header-text {
	text-align: center;
    margin: 0 auto;
}

.story-text {
    width: 65%;
    text-align: center;
    margin: 0 auto;
    line-height: 1.8;
    padding: 10px 0px 10px 0px;	
}

@media (max-width: 768px) {
  .story-text {
	  width: 80%;
  }
}

.small-nav {
	padding: .3rem 1rem;
}

.spacer {
	padding-top: 15px;
	padding-bottom: 15px;
}


.bg-image-full {
  background: no-repeat center center scroll;
  -webkit-background-size: cover;
  -moz-background-size: cover;
  background-size: cover;
  -o-background-size: cover;
}

